<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="EM_CanSupply_STS" Id="{eb6f311b-be4c-4817-8fae-40d122a7d7cf}">
    <Declaration><![CDATA[TYPE EM_CanSupply_STS :
STRUCT
	Tag				: STRING;
	State 			: E_State_PackML;
	StringState		: STRING;
	Error_State 	: E_Motor_Error_State;
	Auto			: BOOL;
	Manueel			: BOOL;
	Richting_L		: BOOL;
	Richting_R		: BOOL;
	Starting_SC 	: BOOL;
	Execute_SC 		: BOOL;
	Resetting_SC 	: BOOL;
	Holding_SC 		: BOOL;
	Unholding_SC 	: BOOL;
	Suspending_SC	: BOOL;
	Unsuspending_SC	: BOOL;
	Aborting_SC		: BOOL;
	Clearing_SC		: BOOL;
	Stopping_SC		: BOOL;
	Completing_SC	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>