<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="STRUCT_EM_CanSupply" Id="{91f2edbf-eab2-4cf1-90d4-b3264c4a9188}">
    <Declaration><![CDATA[TYPE STRUCT_EM_CanSupply :
STRUCT
	CS	: EM_CanSupply_CS;
	HMI	: EM_CanSupply_HMI;
	STS	: EM_CanSupply_STS;
	ALM	: EM_CanSupply_ALM;
	WRN	: EM_CanSupply_WRN;
	PAR	: EM_CanSupply_PAR;
	SIM	: EM_CanSupply_SIM;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>